# virtual-mentor

./: pyproject.toml
virtual_mentor/: streamlit_app.py  utils.py
